web/docs/yaml/langfuse/08-langfuse-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: langfuse-worker
  namespace: langfuse
  labels:
    app: langfuse
    component: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: langfuse
      component: worker
  template:
    metadata:
      labels:
        app: langfuse
        component: worker
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
      containers:
        - name: worker
          image: registry.paas/cmss/langfuse-worker-custom:v0529.arm64.1
          imagePullPolicy: Always
          volumeMounts:
            - name: langfuse-storage
              mountPath: /app/langfuse-storage
          resources:
            requests:
              cpu: "1"
              memory: "2Gi"
            limits:
              cpu: "2"
              memory: "4Gi"
      volumes:
        - name: langfuse-storage
          persistentVolumeClaim:
            claimName: langfuse-storage-pvc
