web/docs/yaml/langfuse/07-langfuse-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: langfuse-web
  namespace: langfuse
  labels:
    app: langfuse
    component: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: langfuse
      component: web
  template:
    metadata:
      labels:
        app: langfuse
        component: web
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
      containers:
        - name: web
          image: registry.paas/cmss/langfuse-web-custom:v0608.arm64.2
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: langfuse-storage
              mountPath: /app/langfuse-storage
          resources:
            requests:
              cpu: "1"
              memory: "2Gi"
            limits:
              cpu: "2"
              memory: "4Gi"
      volumes:
        - name: langfuse-storage
          persistentVolumeClaim:
            claimName: langfuse-storage-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: langfuse-web
  namespace: langfuse
  labels:
    app: langfuse
    component: web
spec:
  type: ClusterIP
  selector:
    app: langfuse
    component: web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
